--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 
-<!DOCTYPE>
-<html>
+<!DOCTYPE html>
 <head>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
