--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
-<head>
+<html>
+	<head>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="index.css">
@@ -8,7 +8,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<title>internship2</title>
-</head>
+	</head>
 <body>
 	<div id="header">
 				<nav class="navbar navbar-inverse">
@@ -44,13 +44,13 @@
 						<p >	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 					</div>
 					<div class="col-xs-6" style="margin-top: 30px;">
-							<img class="img-responsive gmbrK thick-border" src="fas1.jpg"></a>
+							<img class="img-responsive gmbrK thick-border" src="fas1.jpg">
 					</div>
 				</div>
 				<div class="row">
 					<div class="row">
 						<div class="col-md-6">
-							<img class="img-responsive gmbrK thick-border" src="fas2.JPG"></a>
+							<img class="img-responsive gmbrK thick-border" src="fas2.JPG">
 					    </div>
 						
 					    <div  class="col-xs-6" style="margin-top:50px; margin-bottom: 30px;">
@@ -60,12 +60,12 @@
 					</div>	
 				</div>	
 				<div class="row">
-					<img class="img-responsive gmbrK" src="fas.JPG" style="width:2000px; max-height:800px; margin-top:40px;"></a>
+					<img class="img-responsive gmbrK" src="fas.JPG" style="width:2000px; max-height:800px; margin-top:40px;">
 					<h2>Where can I get some?</h2>
 					<p>		There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
 				</div>
-				
-</body>
+		</div>
+	</body>
 </html>
 
 
